--- a/src/components/Navigation/NavBar.css
+++ b/src/components/Navigation/NavBar.css
@@ -7,8 +7,8 @@
 }
 .logoDiv{
     margin-left: 10px;
-    /* background-color: blanchedalmond; */
-    width: 200px;
+    width: 500px;
+    height: 60px;
     display: inline;
 }
 .logo{
@@ -18,7 +18,6 @@
 
 }
 .navOptions{
-    /* background-color: blue; */
     width: 500px;
     height: 65px;
     display: inline;
