--- a/src/components/Navigation/NavBar.css
+++ b/src/components/Navigation/NavBar.css
@@ -28,6 +28,7 @@
     margin-right: 5px;
     margin-top: 17px;
     background-color: #e4e4e4;
+    color: black;
 }
 #searchIcon{
     color: #e4e4e4;
